syntax = "proto3";

package pb;

import "barber/service_item.proto";
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

// insert
message CreateServiceItemRequest{
    int32 category_id = 1;
    string barber_shop_id = 2;
    int32 gender_id = 3;
    string name = 4;
    int32 timer = 5;
    float price = 6;
    optional string description = 7;
    optional string image_url = 8;
}

message CreateServiceItemResponse{
    ServiceItem service = 1;
}

// detail
message GetServiceItemRequest{
    string id = 1;
}

message GetServiceItemResponse {
    ServiceItem service = 1;
}

// list
message ListServiceItemRequest{
    string barber_shop_id = 1;
}

message ListServiceItemResponse {
    repeated ServiceItem services = 1;
}

// update
message UpdateServiceItemRequest{
    string id = 1;
    string barber_shop_id = 2;
    optional int32 gender_id = 3;
    optional string name = 4;
    optional int32 timer = 5;
    optional float price = 6;
    optional string description = 7;
    optional string image_url = 8;
    optional bool is_active = 9;
    optional int32 category_id = 10;
    optional float discount_price = 12;
    optional google.protobuf.Timestamp discount_start_time = 13;
    optional google.protobuf.Timestamp discount_end_time = 14;
}

message UpdateServiceItemResponse{
    ServiceItem service = 1;
}

// delete
message DeleteServiceItemRequest{
    string id = 1;
    string barber_shop_id = 2;
}

message DeleteServiceItemResponse{
    string message = 1;
}