syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message ServiceItem {
    string id = 1;
    string barber_shop_id = 2;
    int32 category_id = 3;
    int32 gender_id = 4;
    string name = 5;
    int32 timer = 6;
    float price = 7;
    float discount_price = 8;
    optional google.protobuf.Timestamp discount_start_time = 9;
    optional google.protobuf.Timestamp discount_end_time = 10;
    string description = 11;
    string image_url = 12;
    string category_name = 13;
    bool is_active = 14;
}